--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peritext-generator-twitter",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "peritext pdf twitter fragments generator",
   "main": "dist/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "react-citeproc": "^0.1.7",
     "react-dom": "^15.6.1",
     "redraft": "^0.8.0",
+    "simple-pandoc": "git+https://github.com/robindemourat/simple-pandoc.git",
     "uuid": "^3.1.0",
     "webshot": "^0.18.0"
   },
